resole some errors

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <audio  id="background-music"  loop>
             <source src="./audio/background.mp3" type="audio/mpeg">
           </audio>
+          <audio  id="enough-time" >
+            <source src="./audio/enough-time.wav" type="audio/mpeg">
+          </audio>
            
           <audio preload='auto' id="wrong">
             <source src="./audio/wrong.wav" type="audio/wav">
